# hd44780_sim

./: README.md  pyproject.toml
hd44780/: __init__.py  hd44780.py  hd44780_comps.py
hd44780_sim/: __init__.py  hd44780.py  hd44780_comps.py
reports/: report.html
test/: test_soft.py
